[package]
description = "parses cargo bench output into struct"
name = "rust_bench_parser"
license = 'MIT'
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.14.0"
regex = "1.6.0"

[[bin]]
name="cargobench_to_csv"
path="src/bin/cargobench_to_csv.rs"
